Upgrade build framework and project dependencies. Use Java 21 from now on.