@@ -3,11 +3,11 @@ package dsk.anotex.importer;
 import dsk.anotex.TestBase;
 import dsk.anotex.core.AnnotatedDocument;
 import dsk.anotex.core.Annotation;
-import org.junit.Test;
+import org.junit.jupiter.api.Test;
 
 import java.util.List;
 
-import static org.junit.Assert.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertEquals;
 
 public class PdfAnnotationImporterTest extends TestBase {
 
@@ -16,7 +16,7 @@ public class PdfAnnotationImporterTest extends TestBase {
         PdfAnnotationImporter importer = new PdfAnnotationImporter();
         AnnotatedDocument document = importer.readAnnotations(resDir + "/Test_Pdf_1.pdf");
         List<Annotation> annotations = document.getAnnotations();
-        Annotation annot = annotations.get(0);
+        Annotation annot = annotations.getFirst();
         assertEquals("\u041f\u0435\u0442", annot.getText()); // Пет ("five" in Cyrillic).
         assertEquals(1, annotations.size());
     }
@@ -29,7 +29,7 @@ public class PdfAnnotationImporterTest extends TestBase {
         assertEquals("Subject2", document.getSubject());
         assertEquals("Author2", document.getAuthor());
         List<Annotation> annotations = document.getAnnotations();
-        Annotation annot = annotations.get(0);
+        Annotation annot = annotations.getFirst();
         assertEquals("Two", annot.getText());
         assertEquals(1, annotations.size());
     }
@@ -70,7 +70,7 @@ public class PdfAnnotationImporterTest extends TestBase {
         PdfAnnotationImporter importer = new PdfAnnotationImporter();
         AnnotatedDocument document = importer.readAnnotations(resDir + "/Test_Pdf_6.pdf");
         List<Annotation> annotations = document.getAnnotations();
-        Annotation annot1 = annotations.get(0);
+        Annotation annot1 = annotations.getFirst();
         assertEquals("seven eight nine ten eleven twelve thirteen fourteen fifteen", annot1.getText());
     }
 
@@ -79,7 +79,7 @@ public class PdfAnnotationImporterTest extends TestBase {
         PdfAnnotationImporter importer = new PdfAnnotationImporter();
         AnnotatedDocument document = importer.readAnnotations(resDir + "/Test_Pdf_7.pdf");
         List<Annotation> annotations = document.getAnnotations();
-        Annotation annot1 = annotations.get(0);
+        Annotation annot1 = annotations.getFirst();
         assertEquals("The programs that a home user needs are email, web browser, pdf file viewer, " +
             "video an music playback software as well as, office program including spreadsheet, " +
             "word processing and presentation graphics. Today, cloud services, " +
